# plutho

./: .gitignore  EeS.npy  FEM_gmsh.py  FEM_time original.py  FEM_time.py  LICENSE  README.md  ScS.npy  analyze_mech_loss.py  fem_piezo_time.py  generate_mesh.py  matrices.py  parse_gmsh.py  piezo.msh  piezoMat_ring.msh  piezo_ring.geo_unrolled  plot_data.py  plot_field.py  power_loss.npy  pyproject.toml  read_scs.py  test.py  todo.txt
.github/workflows/: python-app.yml
docs/: authors.rst  changelog.rst  conf.py  general_information.rst  index.rst  modules.rst  piezo_fem.rst  piezo_fem.simulation.nonlinear.rst  piezo_fem.simulation.rst  plutho.rst  plutho.simulation.nonlinear.rst  plutho.simulation.rst
examples/: basic_example.py  basic_example_temperature.py  new_basic_example.py  simulation_basic_example.py
examples/test_sim/: Test.cfg  Test_disc_results.msh
ma_scripts/: excitation_spectrum.py  pic181_freq_coupled.py  pic181_impedance.py  pic181_impedance_time.py  pic181_time_coupled.py  pic255_heat_cond_convective.py  pic255_impedance.py  pic255_time_coupled.py  plot_double_impedance.py  plot_mech_loss.py  plot_temperature.py  plot_u.py
piezo_fem/: __init__.py  coupled_sim.py  fem_piezo_temp_time.py  fem_piezo_time.py  gmsh_handler.py  io.py  materials.py  mesh.py  nonlinear_sim.py  piezo_fem.py  postprocessing.py  simulation_handler.py  single_sim.py
piezo_fem/mesh/: __init__.py  gmsh_handler.py  mesh_drawer.py  mesh_generator.py  mesh_parser.py
piezo_fem/simulation/: .heat_conduction_time.py.swo  __init__.py  base.py  fem_heat_conduction_time.py  fem_piezo_freq.py  fem_piezo_temp_time.py  fem_piezo_time.py  heat_conduction_time.py  piezo_freq.py  piezo_temp_time.py  piezo_time.py  thermo_piezo_time.py  thermo_time.py
plot_scripts/: extract_gmsh_plot.py  plot_mech_loss.py
plutho/: __init__.py  coupled_sim.py  enums.py  io.py  materials.py  mesh_loader.py  nonlinear_sim.py  postprocessing.py  single_sim.py
plutho/mesh/: __init__.py  custom_mesh_parser.py  gmsh_parser.py  mesh.py  mesh_loader.py
plutho/simulation/: __init__.py  base.py  piezo_freq.py  piezo_time.py  thermo_piezo_time.py  thermo_time.py
plutho/simulations/: __init__.py  helpers.py  integrals.py  piezo_freq.py  piezo_time.py  solver.py  thermo_piezo_time.py  thermo_time.py
scripts/: analyze_input_power.py  analyze_mech_loss.py  analyze_temp_field.py  basic_example.py  check.py  check_electric_energy.py  check_energy.py  check_impedance.py  check_impedence.py  check_mech_loss_density_energy.py  combined_sim.py  compare_hb_freq.py  compare_piezo_therm_therm.py  compare_time_freq.py  convert_temp_mat_data.py  create_gmsh_views.py  example_hb.py  example_nonlinear.py  fix.py  hb_check_nonlinearity.py  heat_cond_comparison.py  nonlinear_quadratic.py  real_sim.py  simulate_freq_impedance.py  temperature_dependent.py  test.py  test_integrals.py  test_jacobian.py
scripts/coupled_sim/: coupled_piezo_freq_heat_cond.py  coupled_piezo_heat_cond.py
scripts/data/: cfs_charge.hist  elec_density_elecEnergy.hist
scripts/hb/: compare_impedance.py  run_nonlinear.py
tests/: test_fields.py  test_simulations.py
(+45 files in other folders)
