[project]
name = "plutho"
description = "Python library for coupled thermo-piezoelectric simulations"
dynamic = ["version"]
authors = [
    { name = "Jonas Hoelscher", email = "hoelscher@emt.uni-paderborn.de" }
]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Developement Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language ::; Python :: 3",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy>=1.12.0",
    "gmsh==4.13.1",
    "python-dotenv",
    "pyyaml",
]

[proect.urls]
homepage = "https://emt.uni-paderborn.de"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["plutho"]

[dependency-groups]
test = [
    "pytest"
]
lint = [
    "ruff"
]
ruff =  [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme"
]
