[project]
name = "plutho"
description = "Python library for coupled thermo-piezoelectric simulations"
dynamic = ["version"]
authors = [
    { name = "Jonas Hoelscher", email = "hoelscher@emt.uni-paderborn.de" }
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Developement Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language ::; Python :: 3",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "gmsh>=4.13.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]
lint = [
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
]
tests = [
    "pytest>=9.0.2",
]

[proect.urls]
homepage = "https://emt.uni-paderborn.de"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plutho"]

[tool.setuptools_scm]
