[project]
name = "plutho"
description = "Python library for coupled thermo-piezoelectric simulations"
dynamic = ["version"]
authors = [
    { name = "Jonas Hoelscher", email = "hoelscher@emt.uni-paderborn.de" }
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Developement Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language ::; Python :: 3",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "gmsh",
    "matplotlib",
    "numpy",
    "python-dotenv",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
lint = [
    "ruff",
]
test = [
    "pytest",
]

[proect.urls]
homepage = "https://emt.uni-paderborn.de"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plutho"]

[tool.setuptools_scm]
